--- a/Tugas HTML Dan CSS/YANG BARU/index.html
+++ b/Tugas HTML Dan CSS/YANG BARU/index.html
@@ -182,8 +182,23 @@
     @media (max-width: 768px) {
       .container { flex-direction: column; }
       .produk-list { grid-template-columns: repeat(2, 1fr); }
-    }
+    }  
   </style>
+
+  <style>
+    .detailGambar{}
+  </style>
+
+  <!--JS-->
+  <script>
+    function detailImg(){
+      $(",detailGambar").show();
+    }
+
+    function sembunyikan(){
+      $(",detailGambar").hide();
+    }
+  </script>
 </head>
 <body>
 
