--- a/COTS1-Farhan Kurniawan-2311104073/detailbarang.html
+++ b/COTS1-Farhan Kurniawan-2311104073/detailbarang.html
@@ -113,6 +113,18 @@
         price: "Rp 569.000",
         image: "assets/img/helldivers 2.jpg",
         desc: "Game aksi kooperatif yang penuh ledakan, humor, dan kerja tim untuk menyelamatkan galaksi dari ancaman alien."
+      },
+      cyberpunk2077: {
+        title: "Cyberpunk 2077",
+        price: "Rp 599.000",
+        image: "assets/img/cyberpunk2077.jpg",
+        desc: "Petualangan futuristik di Night City, di mana setiap pilihan memengaruhi cerita. Dunia terbuka penuh aksi dan misteri dari CD Projekt Red."
+      },
+      hogwartslegacy: {
+        title: "Hogwarts Legacy",
+        price: "Rp 750.000",
+        image: "assets/img/hogwartslegacy.jpg",
+        desc: "Masuki dunia sihir abad ke-19 di Hogwarts. Jelajahi kastil, kuasai mantra, dan temukan rahasia dunia sihir dalam petualangan open-world menawan."
       }
     };
 
